--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.20.1",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "dayjs-plugin-utc": "^0.1.2",
     "firebase": "^10.13.0",
     "i18next": "^23.13.0",
     "query-string": "^9.1.0",
